@@ -1,3 +1,8 @@
+2004-03-15  Dan Winship  <danw@ximian.com>
+
+	* libsoup/soup-soap-message.c (soup_soap_message_persist): Fix up
+	types to kill a warning with -Wall -O2
+
 2004-03-05  JP Rosevear <jpr@ximian.com>
 
 	* configure.in: bump version, libtool number
